# sample-project

./: .gitignore  README.md  init_project.sh  lint.sh  pyproject.toml
.claude/: CLAUDE.md
conf/: main.yaml
notebook/: sample.ipynb
run/: main.py
src/sample_project/: meta.py  resolvers.py
